Alterando Cor de fonte pra branco

--- a/Help Faccat/index.html
+++ b/Help Faccat/index.html
@@ -17,10 +17,11 @@
 	</div>
 	</header>
 	<!-- Começo do "corpo" do site -->
+	
 	<div class="div_body">
 		<form class="div_form_contato" form name="form1" method="post" action="#">
 			<div class="form-group">
-				<label for="exampleFormControlInput1">Nome:</label>
+				<label for="exampleFormControlInput1"><font color="white">Nome:</font></label>
 				<div class="row">
 				    <div class="col">
 				      <input type="text" class="form-control" placeholder="Nome Completo" name="nome">
@@ -28,11 +29,11 @@
 	  			</div>
   			</div>
   		  <div class="form-group">
-		    <label for="exampleFormControlInput1">Endereço de Email:</label>
+		    <label for="exampleFormControlInput1"><font color="white">Endereço de Email:</font></label>
 		    <input type="email" class="form-control" id="exampleFormControlInput1" name="email" placeholder="nome@exemplo.com">
 		  </div>
 		  <div class="form-group">
-		    <label for="exampleFormControlSelect1">Curso:</label>
+		    <label for="exampleFormControlSelect1"><font color="white">Curso:</font></label>
 		    <select class="form-control" id="exampleFormControlSelect1" name="assunto">
 		      <option value="" disabled selected>Selecione um Curso</option>
 		      <option value="sistemas">Sistemas de Informação</option>
@@ -41,7 +42,7 @@
 		    </select>
 		  </div>
 		  <div class="form-group">
-			  <label for="exampleFormControlTextarea1">Foto do Perfil:</label>
+			  <label for="exampleFormControlTextarea1"><font color="white">Foto do Perfil:</font></label>
 			  <input class="form-control" type="file" name="foto" >
 		  </div>
 		  <br><button type="submit" class="btn btn-primary" onclick="return validaDados()">Salvar</button></br>
