Fiz uma pequena alteração no index :D

--- a/Help Faccat/index.html
+++ b/Help Faccat/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>FACCAT - Banco de Talentos</title>
+	<title>PHF - Projeto Help Faccat</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
  	<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -12,9 +12,9 @@
 	<!-- Div Banner -->
 	<div class="div_banner">
 		<div class="div_banner_imagens">
-			<img typeof="foaf:Image" src="assets/imagens/banner_imagem1.png" alt="" class="img">
+			<img typeof="foaf:Image" src="assets/imagens/banner_imagem1.png" alt="" class="img"; >
 		</div>
-	</div>
+ 	</div>
 	</header>
 	<!-- Começo do "corpo" do site -->
 	
