Mudei uma frase apenas

--- a/Help Faccat/index.html
+++ b/Help Faccat/index.html
@@ -62,7 +62,7 @@
 			  </div>
 			  	<button type="submit" class="btn btn-primary" onclick="return validaDados()">Salvar</button></br>
 			  
-			  	<a class="btn btn-help" onclick="trocar();">Troque a cor</a>
+			  	<a class="btn btn-help" onclick="trocar();">Mude a cor de fundo aqui!</a>
 			</form>
 			
 		</div>
