--- a/Help Faccat/index.html
+++ b/Help Faccat/index.html
@@ -54,6 +54,7 @@
 			      <option value="sistemas">Sistemas de Informação</option>
 			      <option value="direito">Direito</option>
 			      <option value="historia">Historia</option>
+                              <option value="enfermagema">Enfermagem</option>
 			    </select>
 			  </div>
 			  <div class="form-group">
