--- a/Help Faccat/index.html
+++ b/Help Faccat/index.html
@@ -54,7 +54,7 @@
 			      <option value="sistemas">Sistemas de Informação</option>
 			      <option value="direito">Direito</option>
 			      <option value="historia">Historia</option>
-                              <option value="enfermagema">Enfermagem</option>
+			      <option value="enfermagem">Enfermagem</option>
 			    </select>
 			  </div>
 			  <div class="form-group">
@@ -63,7 +63,7 @@
 			  </div>
 			  	<button type="submit" class="btn btn-primary" onclick="return validaDados()">Salvar</button></br>
 			  
-			  	<a class="btn btn-help" onclick="trocar();">Mude a cor de fundo aqui!</a>
+			  	<a class="btn btn-help" onclick="trocar();"><input type="button" name="botao" value="Mude a cor de fundo aqui!"></a>
 			</form>
 			
 		</div>
